added media queries for small mobile devices

--- a/activities.html
+++ b/activities.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" type="text/css" href="..\Tribe\assets\style.css">
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
@@ -26,7 +26,7 @@
 </div>
 <!-- code for info text -->
 <div class="site-info"> 
-	<p>Looking to find new things to do in your local area? <br> Looking to find other like-minded people? <br> Look no further - everything you need is below! </p>
+	<p>Looking to find new things to do in your local area?<br>Looking to find other like-minded people?<br>Look no further - everything you need is below! </p>
 	</div>
 
 	<div class="pageHeading">
@@ -40,7 +40,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/park.webp" alt="park" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/park.webp" alt="park">
   		<div>
   			<p>Park Meetup-up</p>
   		</div>
@@ -73,7 +73,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/coffee.webp" alt="coffee cup" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/coffee.webp" alt="coffee cup" >
   		<div>
   			<p>Coffee Meet-up</p>
   		</div>
@@ -106,7 +106,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/dinner.webp" alt="dinner" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/dinner.webp" alt="dinner">
   		<div>
   			<p>Dinner and Cocktails Meetup</p>
   		</div>
@@ -140,7 +140,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/adults.webp" alt="adults" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/adults.webp" alt="adults">
   		<div>
   			<p>Adults Only Meetup-up</p>
   		</div>
@@ -173,7 +173,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/beach.webp" alt="beach" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/beach.webp" alt="beach">
   		<div>
   			<p>Beach Meet-up</p>
   		</div>
@@ -206,7 +206,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="../Tribe/assets/images/comedy.webp" alt="Comedian" style="width:290px;height:300px;">
+  		<img class="images" src="../Tribe/assets/images/comedy.webp" alt="Comedian" >
   		<div>
   			<p>Comedy Night Meetup</p>
   		</div>
