edited the links for assets

--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
     <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box2">
-    <img class="img1" src="../Tribe/assets/images/groupphoto.webp" alt="group photo" width="350" height="400">
+    <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" width="350" height="400">
   </div>
 </div>
 
