--- a/activities.html
+++ b/activities.html
@@ -40,7 +40,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/park.webp" alt="park">
+  		<img class="images" src="assets/images/park.webp" alt="park">
   		<div>
   			<p>Park Meetup-up</p>
   		</div>
@@ -73,7 +73,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/coffee.webp" alt="coffee cup" >
+  		<img class="images" src="assets/images/coffee.webp" alt="coffee cup" >
   		<div>
   			<p>Coffee Meet-up</p>
   		</div>
@@ -106,7 +106,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/dinner.webp" alt="dinner">
+  		<img class="images" src="assets/images/dinner.webp" alt="dinner">
   		<div>
   			<p>Dinner and Cocktails Meetup</p>
   		</div>
@@ -140,7 +140,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/adults.webp" alt="adults">
+  		<img class="images" src="assets/images/adults.webp" alt="adults">
   		<div>
   			<p>Adults Only Meetup-up</p>
   		</div>
@@ -173,7 +173,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/beach.webp" alt="beach">
+  		<img class="images" src="assets/images/beach.webp" alt="beach">
   		<div>
   			<p>Beach Meet-up</p>
   		</div>
@@ -206,7 +206,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="../Tribe/assets/images/comedy.webp" alt="Comedian" >
+  		<img class="images" src="assets/images/comedy.webp" alt="Comedian" >
   		<div>
   			<p>Comedy Night Meetup</p>
   		</div>
