--- a/index.html
+++ b/index.html
@@ -41,17 +41,17 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainer">
-  	<div><img src="../Tribe/assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img src="assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainer">
-  	<div> <img src="../Tribe/assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div> <img src="assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainer">
-  	<div><img src="../Tribe/assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img src="assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
