made menu links larger, added logo edited hero image

--- a/about.html
+++ b/about.html
@@ -10,13 +10,25 @@
 	</head>
 
 <body>
-	<div>
-		<ul>
-  <li><a href="about.html">About</a></li>
-  <li><a href="activities.html">Activities</a></li>
-  <li><a href="index.html">Home</a></li>
-</ul>
-</div>
+	<header>
+       <a href="index.html">
+            <h2 id="logo">Tribe</h2>
+        </a>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="activities.html">Activities</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                
+            </ul>
+        </nav>
+    </header>
 	<div class="hero-image">
   <div class="hero-text">
   	  	    <h1>Tribe</h1>
