--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 
 <body>
 	<!-- nav bar-->
-	<div>
-		<ul>
-  <li><a href="about.html">About</a></li>
-  <li><a href="activities.html">Activities</a></li>
-  <li><a href="index.html">Home</a></li>
-</ul>
-</div>
+	    <header>
+       <a href="index.html">
+            <h2 id="logo">Tribe</h2>
+        </a>
+        <nav>
+            <ul id="menu">
+                <li>
+                    <a href="about.html">About</a>
+                </li>
+                <li>
+                    <a href="activities.html">Activities</a>
+                </li>
+                <li>
+                    <a href="index.html">Home</a>
+                </li>
+                
+            </ul>
+        </nav>
+    </header>
 
 <!-- Hero image text and link-->
 	<div class="hero-image">
@@ -41,17 +53,17 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainer">
-  	<div><img src="assets/images/coffee.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img class="images" src="assets/images/coffee.webp" alt="Avatar"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainer">
-  	<div> <img src="assets/images/dinner.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div> <img class="images"  src="assets/images/dinner.webp" alt="Avatar"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainer">
-  	<div><img src="assets/images/beach.webp" alt="Avatar" style="width:290px;height:300px;"></div>
+  	<div><img class="images"  src="assets/images/beach.webp" alt="Avatar"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
