realigned featured text

--- a/activities.html
+++ b/activities.html
@@ -34,11 +34,11 @@
 <!-- code for info text -->
 <div class="site-info"> 
 	<p>Looking to find new things to do in your local area?<br>Looking to find other like-minded people?<br>Look no further - everything you need is below! </p>
-	</div>
+	</div> <br>
 
 	<div class="pageHeading">
 		<h2>Find your next meet-up! </h2>
-	</div>
+	</div><br>
 
 <!--container for activities-->
 
