removed hero image and realigned content on about page

--- a/about.html
+++ b/about.html
@@ -29,13 +29,7 @@
             </ul>
         </nav>
     </header>
-	<div class="hero-image">
-  <div class="hero-text">
-  	  	    <h1>Tribe</h1>
-    <p>Find Your People</p>
-    </div>
-</div>
- 
+	 
 <div class="activitiesBox">
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
@@ -43,7 +37,7 @@
     <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box2">
-    <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" width="350" height="400">
+    <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" >
   </div>
 </div>
 
