removed text from hero image and decreased space between image and nav bar

--- a/index.html
+++ b/index.html
@@ -32,14 +32,12 @@
     </header>
 
 <!-- Hero image text and link-->
-	<div class="hero-image">
-  <div class="hero-text">
-  	  	    <h1>Tribe</h1>
-    <p>Find Your People</p>
-    </div>
+	<div class="hero-image"> 
 </div>
 
 <!-- introduction text -->
+ 
+<h1> Find Your People</h1>
  <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> FInd other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div>
 
  <!--August Highlights -->
