--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <!-- introduction text -->
  
 <h1> Find Your People</h1>
- <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> FInd other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div>
+ <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> FInd other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div><br>
 
  <!--August Highlights -->
 
