added different pictures to footer and edited Alt tags for images.

--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 </form>
 </div>
 <div>
-  <img  class="img2" src="assets/images/jpeg-png/group.jpg" alt="Group of women laughing">  
+  <img  class="img2" src="assets/images/jpeg-png/business.jpg" alt="Man holding a business paper">  
 </div>
 </div>
 </footer>
