--- a/index.html
+++ b/index.html
@@ -67,27 +67,29 @@
   </div>
 
 </div>
-<footer>	
-	<div class="footerContainer">
-	<div class="footer-info">  
-	<form class="footerFormContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
-	<h3> Contact us</h3>
-   <label for="name">Your name:</label> <br>
-  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
-  <label for="email">Email Address:</label><br>
-  <input type="email" id="email" name="email" placeholder="Email Address" required><br>
-  <label for="signup">Join our mailing list?</label> 
-  <input type="radio" id="yes" name="signup" value="yes"> Yes
-  <input type="radio" id="no" name="signup" value="no"> No <br><br>
-  <label for="textbox">How can we help today?</label>
-  <textarea id='textbox' cols='50' rows='10' name='textbox' placeholder='Use this space to let us know your thoughts:' required></textarea><br><br>
-  <input class="formSubmit" type="submit" value="Submit">
-</form>
-</div>
-<div>
-	<img  class="img2" src="assets/images/jpeg-png/group.jpg" alt="Group of women laughing">	
-</div>
-</div>
+<footer class="footerContainer">	
+  <ul id="social-networks">
+        <li>
+          <a class="socials" href="https://www.facebook.com/" target="_blank" rel="noopener" aria-label="Visit our facebook page, opens in a new tab">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a class="socials" href="https://www.instagram.com/" target="_blank" rel="noopener" aria-label="Visit our Instagram page, opens in a new tab">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </li>
+        <li>
+          <a class="socials" href="https://twitter.com/" target="_blank" rel="noopener" aria-label="Visit our X page, opens in a new tab">
+            <i class="fa-brands fa-x-twitter"></i>
+          </a>
+        </li>
+        <li>
+         <a class="socials" href="mailto:adelle.king@outlook.com" target="_blank" rel="noopener" aria-label="Send us an Email, opens in a new tab">
+            <i class="fa-regular fa-envelope"></i>
+          </a>
+        </li>
+      </ul>
 </footer>
 </body>
 </html>
