edited photos to remove the squashed look, re-saved as JPG.

--- a/activities.html
+++ b/activities.html
@@ -47,7 +47,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/park.webp" alt="park">
+  		<img class="images" src="assets/images/jpeg-png/park.jpg" alt="park">
   		<div>
   			<p>Park Meetup-up</p>
   		</div>
@@ -80,7 +80,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/coffee.webp" alt="coffee cup" >
+  		<img class="images" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
   		<div>
   			<p>Coffee Meet-up</p>
   		</div>
@@ -147,7 +147,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/adults.webp" alt="adults">
+  		<img class="images" src="assets/images/jpeg-png/adults.jpg" alt="adults">
   		<div>
   			<p>Adults Only Meetup-up</p>
   		</div>
@@ -213,7 +213,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/comedy.webp" alt="Comedian" >
+  		<img class="images" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
   		<div>
   			<p>Comedy Night Meetup</p>
   		</div>
