--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainer">
-  	<div><img class="images" src="assets/images/coffee.webp" alt="Avatar"></div>
+  	<div><img class="images" src="assets/images/jpeg-png/coffee.jpg" alt="Avatar"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
@@ -65,8 +65,8 @@
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
-
 </div>
+
 <footer class="footerContainer">	
   <ul id="social-networks">
         <li>
