--- a/activities.html
+++ b/activities.html
@@ -252,19 +252,19 @@
 <div class="form">
 	<h2 class="formHeader" id="activity_section">Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	<form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
-   <label for="name">Your name:</label> <br>
+   <label for="name"></label> <br>
   <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
-  <label for="activityName">Activity title:</label><br>
-  <input type="text" id="activityName" name="activityName" placeholder="Beach Trip" required><br>
-  <label for="activityDate">Activity date:</label><br>
-  <input type="date" id="activityDate" name="activityDate" placeholder="23rd Aug 2023" required>
-  <label for="activityTIme">Activity time:</label>
+  <label for="activityName"></label><br>
+  <input type="text" id="activityName" name="activityName" placeholder="Activity Name" required><br>
+  <label for="activityDate">Activity Date & Time</label><br>
+  <input type="date" id="activityDate" name="activityDate" required>
+  <label for="activityTIme"></label>
   <input type="time" id="activityTime" name="activityTime" placeholder="10am" required><br>
-  <label for="activityLocation">Activity location:</label><br>
-  <input type="text" id="activityLocation" name="activityLocation" placeholder="Maidstone" required><br><br>
+  <label for="activityLocation"></label><br>
+  <input type="text" id="activityLocation" name="activityLocation" placeholder="Activity Location" required><br><br>
   <label for="myfile">Upload a picture for your activity</label>
   <input type="file" id="myfile" name="myfile"><br><br>
-  <label for="activityDetails">Activity details:</label><br>
+  <label for="activityDetails"></label><br>
   <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 </form>
@@ -272,10 +272,10 @@
 <div class="form">
 		<h2 class="formHeader">RSVP to your next event<br> here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	<form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
-   <label for="name">Your name:</label> <br>
-  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>
-  <label for="email">Enter your email:</label>
-  <input type="email" id="email" name="email">
+   <label for="name"></label> <br>
+  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br><br>
+  <label for="email"></label>
+  <input type="email" id="email" name="email" placeholder="Enter your email address" required>
   <h4>Which event are you attending?</h4>
   <input type="checkbox" id="park" name="event_name" value="park">
   <label for="park">Park Meet-up</label>
@@ -295,7 +295,7 @@
   <input type="radio" id="no" name="requirements" value="yes" required>
   <label for="no">No</label><br><br>
   <label for="activityDetails"></label>
-  <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder="If yes, please provide further details:"></textarea><br><br>
+  <textarea id='activityDetails' cols='50' rows='5' name='activityDetails' placeholder="If yes, please provide further details:"></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 
 </form>
