edits to the about page layout. Added a map image and added more text

--- a/about.html
+++ b/about.html
@@ -30,15 +30,18 @@
         </nav>
     </header>
 	 
-<div class="activitiesBox">
+<div class="aboutContainerBox">
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
     <h2 class="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
-    <p>Tribe is a dedicated space for the African and Caribbean community, a space to make new friendships, explore the local area and find local Black Owned businesses. <br> <br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
+    <p class="aboutPageText">Tribe is a dedicated space for the African and Caribbean community. Together, we are building safe spaces to make new friendships and connects. Safe spaces where we can explore the local areawith like-minded people and of course - find those Black Owned business who offer us the services and products designed for us!<br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
-  <div class="box2">
-    <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" >
+  <div class="box1">
+    <img class="img1" src="assets/images/jpeg-png/groupphoto.jpg" alt="group photo" >
   </div>
+</div>
+<div>
+  <img class="map" src="assets/images/jpeg-png/map.jpg">
 </div>
 
 <footer class="footerContainer">  
