--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
     </header>
 
 <!-- Hero image text and link-->
+	
+<div class="hero-outer">
 	<div class="hero-image"> 
+</div>
 </div>
 
 <!-- introduction text -->
