added favicon logo

--- a/about.html
+++ b/about.html
@@ -6,6 +6,10 @@
 	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
 	<link rel="stylesheet" type="text/css" href="assets\style.css">
   <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 	<title>Tribe</title>
 	</head>
 
@@ -34,7 +38,7 @@
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
     <h2 class="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
-    <p class="aboutPageText">Tribe is a dedicated space for the African and Caribbean community. Together, we are building safe spaces to make new friendships and connects. Safe spaces where we can explore the local areawith like-minded people and of course - find those Black Owned business who offer us the services and products designed for us!<br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
+    <p class="aboutPageText">Tribe is a dedicated space for the African and Caribbean community. Together, we are building safe spaces to make new friendships and connections. Safe spaces where we can explore the local area with like-minded people and of course - find those Black Owned business who offer us the services and products designed for us!<br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box1">
     <img class="img1" src="assets/images/jpeg-png/groupphoto.jpg" alt="group photo" >
