--- a/about.html
+++ b/about.html
@@ -3,15 +3,16 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-	<link rel="stylesheet" type="text/css" href="assets\style.css">
-  <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
+	<!-- Meta tags for search engines -->
+    <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
+    <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
+	<link rel="stylesheet" type="text/css" href="assets\style.css"> 
+  <title>Tribe</title>
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
-	<title>Tribe</title>
-	</head>
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+</head>
 
 <body>
 	<header >
@@ -72,5 +73,6 @@
         </li>
       </ul>
 </footer>
+ <script src="https://kit.fontawesome.com/e893473805.js" crossorigin="anonymous"></script>
 </body>
 </html>
