--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
 	<link rel="stylesheet" type="text/css" href="assets\style.css"> 
   <title>Tribe</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
 
@@ -20,7 +20,7 @@
             <h2 id="logo">Tribe</h2>
         </a>
         <nav>
-            <ul id="menu">
+            <ul id="menu">"C:\Users\adell\Computer Science\Tribe\favicon_io\favicon.ico"
                 <li>
                     <a href="about.html">About</a>
                 </li>
