further troubleshooting to favicon

--- a/about.html
+++ b/about.html
@@ -8,9 +8,9 @@
     <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
 	<link rel="stylesheet" type="text/css" href="assets\style.css"> 
   <title>Tribe</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="/favicon_io/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon_io/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon_io/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="https://adelleking.github.io/Tribe/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://adelleking.github.io/Tribe/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://adelleking.github.io/Tribe/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 </head>
 
