final edits to 425 screen size for home page

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <h2 id="logo">Tribe</h2>
         </a>
         <nav>
-            <ul id="menu">"C:\Users\adell\Computer Science\Tribe\favicon_io\favicon.ico"
+            <ul id="menu">
                 <li>
                     <a href="about.html">About</a>
                 </li>
