edits to activity page responsivness completed

--- a/activities.html
+++ b/activities.html
@@ -50,13 +50,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/jpeg-png/park.jpg" alt="park">
-  		<div>
+  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/park.jpg" alt="park">
+  		<div class="activityTitle">
   			<p>Park Meetup-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Park Meet Up</h2>
+      <h2 class="activitiesH2">Park Meet Up</h2>
        	<table>
        		<tr>
     				<td class="table-data">Location -</td>
@@ -83,13 +83,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
-  		<div>
+  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
+  		<div class="activityTitle">
   			<p>Coffee Meet-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Coffee Meet Up</h2>
+      <h2 class="activitiesH2">Coffee Meet Up</h2>
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
@@ -116,13 +116,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/dinner.webp" alt="dinner">
-  		<div>
-  			<p>Dinner and Cocktails Meetup</p>
+  		<img class="images" id="imagesActivities" src="assets/images/dinner.webp" alt="dinner">
+  		<div class="activityTitle">
+  			<p>Dinner&Cocktails Meetup</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Dinner and Cocktails</h2>
+      <h2 class="activitiesH2">Dinner&Cocktails</h2>
       <table>
        		<tr>
     				<td class="table-data">Location-</td>
@@ -150,13 +150,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/jpeg-png/adults.jpg" alt="adults">
-  		<div>
+  		<img class="images" id="imagesActivities"  src="assets/images/jpeg-png/adults.jpg" alt="adults">
+  		<div class="activityTitle">
   			<p>Adults Only Meetup-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Adults Only Meet Up</h2>
+      <h2 class="activitiesH2">Adults Only Meet Up</h2>
        	<table>
        		<tr>
     				<td class="table-data">Location -</td>
@@ -183,13 +183,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/beach.webp" alt="beach">
-  		<div>
+  		<img class="images"  id="imagesActivities" src="assets/images/beach.webp" alt="beach">
+  		<div class="activityTitle">
   			<p>Beach Meet-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Beach Meet Up</h2>
+      <h2 class="activitiesH2">Beach Meet Up</h2>
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
@@ -216,13 +216,13 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
-  		<div>
+  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
+  		<div class="activityTitle">
   			<p>Comedy Night Meetup</p>
   		</div>
         </div>
     <div class="flip-card-back">
-      <h2>Comedy Night </h2>
+      <h2 class="activitiesH2">Comedy Night </h2>
       <table>
        		<tr>
     				<td class="table-data">Location -</td>
@@ -253,7 +253,7 @@
 
 <div class="flex-container2">
 <div class="form">
-	<h2 class="formHeader" id="activity_section">Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
+	<h2 class="formHeader" >Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	<form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
    <label for="name"></label> <br>
   <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
