--- a/index.html
+++ b/index.html
@@ -57,17 +57,17 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainerLeft">
-  	<div><img class="images" src="assets/images/jpeg-png/coffee.jpg" alt="Avatar"></div>
+  	<div><img class="images" id="imagesIndex" src="assets/images/jpeg-png/coffee.jpg" alt="Avatar"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerRight">
-  	<div> <img class="images"  src="assets/images/dinner.webp" alt="Avatar"></div>
+  	<div> <img class="images"  id="imagesIndex" src="assets/images/dinner.webp" alt="Avatar"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerCenter">
-  	<div><img class="images"  src="assets/images/beach.webp" alt="Avatar"></div>
+  	<div><img class="images" id="imagesIndex" src="assets/images/beach.webp" alt="Avatar"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
