about page responsiveness for screen size 425 complete.

--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 <div class="aboutContainerBox">
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
-    <h2 class="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
+    <h2 class="aboutpageH2" id="aboutpageH2"> A space to grow relationships, share experiences and build communities.</h2>
     <p class="aboutPageText">Tribe is a dedicated space for the African and Caribbean community. Together, we are building safe spaces to make new friendships and connections. Safe spaces where we can explore the local area with like-minded people and of course - find those Black Owned business who offer us the services and products designed for us!<br>Explore the site to find upcoming <a href="activities.html#activity_section">activities</a> or <a href ="activities.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box1">
