resonsivness for activities page @320px complete

--- a/about.html
+++ b/about.html
@@ -15,7 +15,8 @@
 </head>
 
 <body>
-	<header >
+  <div>
+	<header>
        <a href="index.html">
             <h2 id="logo">Tribe</h2>
         </a>
@@ -34,6 +35,7 @@
             </ul>
         </nav>
     </header>
+  </div>
 	 
 <div class="aboutContainerBox">
   <div class="box1">
