--- a/activities.html
+++ b/activities.html
@@ -14,6 +14,7 @@
    <title>Tribe</title>
 	</head>
 <body>
+	<div>
 	<header>
        <a href="index.html">
             <h2 id="logo">Tribe</h2>
@@ -33,6 +34,7 @@
             </ul>
         </nav>
     </header>
+  </div>
 	
 <!-- code for info text -->
 <div class="site-info"> 
