further edits to responsivness on Activities page @ 320px

--- a/activities.html
+++ b/activities.html
@@ -54,7 +54,7 @@
   	<div class="flip-card-front">
   		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/park.jpg" alt="park">
   		<div class="activityTitle">
-  			<p>Park Meetup-up</p>
+  			<p id="activityTitle">Park Meetup-up</p>
   		</div>
         </div>
     <div class="flip-card-back">
