furthe edits to responsivness @375px for home and activities pages

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
  <!--August Highlights -->
 
- <div>
+ <div id="pageHeading">
  	<div class="pageHeading">
  		<h2>Top Picks For August </h2>
  	</div>
