reviwed index & activities pages to have relative sizing rather than using px

--- a/activities.html
+++ b/activities.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="assets\style.css">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
 	 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
    integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
    crossorigin=""/>   
@@ -52,7 +52,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/park.jpg" alt="park">
+  		<img src="assets/images/jpeg-png/park.jpg" alt="park">
   		<div class="activityTitle">
   			<p id="activityTitle">Park Meetup-up</p>
   		</div>
@@ -85,7 +85,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
+  		<img class="images-Activities" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
   		<div class="activityTitle">
   			<p>Coffee Meet-up</p>
   		</div>
@@ -118,7 +118,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" id="imagesActivities" src="assets/images/dinner.webp" alt="dinner">
+  		<img class="images-Activities" src="assets/images/dinner.webp" alt="dinner">
   		<div class="activityTitle">
   			<p>Dinner&Cocktails Meetup</p>
   		</div>
@@ -152,7 +152,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" id="imagesActivities"  src="assets/images/jpeg-png/adults.jpg" alt="adults">
+  		<img class="images-Activities"  src="assets/images/jpeg-png/adults.jpg" alt="adults">
   		<div class="activityTitle">
   			<p>Adults Only Meetup-up</p>
   		</div>
@@ -185,7 +185,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images"  id="imagesActivities" src="assets/images/beach.webp" alt="beach">
+  		<img class="images-Activities" src="assets/images/beach.webp" alt="beach">
   		<div class="activityTitle">
   			<p>Beach Meet-up</p>
   		</div>
@@ -218,7 +218,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images" id="imagesActivities" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
+  		<img class="images-Activities" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
   		<div class="activityTitle">
   			<p>Comedy Night Meetup</p>
   		</div>
