--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!--<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">-->
-	<link rel="stylesheet" type="text/css" href="assets\style.css">
-	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-	<link rel="manifest" href="/site.webmanifest">
+	<link rel="stylesheet" type="text/css" href="assets/style.css">
+	
 	<title>Tribe</title>
 	</head>
 
@@ -57,17 +53,17 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainerLeft">
-  	<div><img class="images" id="imagesIndex" src="assets/images/jpeg-png/coffee.jpg" alt="Avatar"></div>
+  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/jpeg-png/coffee.jpg" alt="man making a coffee"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerRight">
-  	<div> <img class="images" id="imagesIndex" src="assets/images/dinner.webp" alt="Avatar"></div>
+  	<div> <img class="imagesIndex" src="assets/images/dinner.webp" alt="table with food"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerCenter">
-  	<div><img class="images" id="imagesIndex" src="assets/images/beach.webp" alt="Avatar"></div>
+  	<div><img class="imagesIndex" src="assets/images/beach.webp" alt="image of a beach"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
   </div>
