started to add media queries to site

--- a/activities.html
+++ b/activities.html
@@ -52,7 +52,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img src="assets/images/jpeg-png/park.jpg" alt="park">
+  		<img class="images-Activities" src="assets/images/jpeg-png/park.jpg" alt="park">
   		<div class="activityTitle">
   			<p id="activityTitle">Park Meetup-up</p>
   		</div>
@@ -270,7 +270,7 @@
   <label for="myfile">Upload a picture for your activity</label>
   <input type="file" id="myfile" name="myfile"><br><br>
   <label for="activityDetails"></label><br>
-  <textarea id='activityDetails' cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
+  <textarea cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 </form>
 </div>
@@ -300,7 +300,7 @@
   <input type="radio" id="no" name="requirements" value="yes" required>
   <label for="no">No</label><br><br>
   <label for="activityDetails"></label>
-  <textarea id='activityDetails' cols='50' rows='5' name='activityDetails' placeholder="If yes, please provide further details:"></textarea><br><br>
+  <textarea cols='50' rows='5' name='activityDetails' placeholder="If yes, please provide further details:"></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 
 </form>
