--- a/event.html
+++ b/event.html
@@ -25,7 +25,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="activities.html">Activities</a>
+                    <a href="event.html">Events</a>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
