--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <a href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="activities.html">Activities</a>
+                    <a href="event.html">Events</a>
                 </li>
                 <li>
                     <a href="index.html">Home</a>
