trying to fix bug when applying media query at size 768

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <!-- introduction text -->
  
 <h1> Find Your People</h1>
- <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> FInd other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div><br>
+ <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> Find other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div><br>
 
  <!--August Highlights -->
 
@@ -55,17 +55,17 @@
   <div  class="featuredContainerLeft">
   	<div class="imageContainer"><img class="imagesIndex" src="assets/images/jpeg-png/coffee.jpg" alt="man making a coffee"></div>
   	<div class="activity-info">Coffee Meet-up</div>
-  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
+  	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerRight">
   	<div> <img class="imagesIndex" src="assets/images/dinner.webp" alt="table with food"></div>
   	<div class="activity-info"> Dinner and Cocktails Meetup</div>
-  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
+  	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerCenter">
   	<div><img class="imagesIndex" src="assets/images/beach.webp" alt="image of a beach"></div>
   	<div class="activity-info"> Beach Meet-up</div>
-  	<div class="findOutMore"><a href="activities.html">Find out more</a></div>
+  	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
 </div>
 
