final responsiveness for mobile screen sizes accross webpages complete

--- a/event.html
+++ b/event.html
@@ -120,7 +120,7 @@
   	<div class="flip-card-front">
   		<img class="images-Activities" src="assets/images/dinner.webp" alt="dinner">
   		<div class="activityTitle">
-  			<p>Dinner&Cocktails Meetup</p>
+  			<p>Dinner Meetup</p>
   		</div>
         </div>
     <div class="flip-card-back">
