--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 
 <!-- Hero image text and link-->
 	
-<div class="hero-outer">
+
 	<div class="hero-image"> 
 </div>
-</div>
+
 
 <!-- introduction text -->
  
@@ -58,12 +58,12 @@
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerRight">
-  	<div> <img class="imagesIndex" src="assets/images/dinner.webp" alt="table with food"></div>
-  	<div class="activity-info"> Dinner and Cocktails Meetup</div>
+  	<div class="imageContainer"> <img class="imagesIndex" src="assets/images/dinner.webp" alt="table with food"></div>
+  	<div class="activity-info"> Dinner Meetup</div>
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerCenter">
-  	<div><img class="imagesIndex" src="assets/images/beach.webp" alt="image of a beach"></div>
+  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/beach.webp" alt="image of a beach"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
