changed file directory location for Stylesheet

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
 	<!-- Meta tags for search engines -->
     <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
     <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
-	<link rel="stylesheet" type="text/css" href="assets/style.css"> 
+	<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
   <title>Tribe</title>
   <link rel="apple-touch-icon" sizes="180x180" href="https://adelleking.github.io/Tribe/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="https://adelleking.github.io/Tribe/favicon-32x32.png">
